<resources>
    <string name="app_name">Lab_2A-Tip-Calculator</string>
    <string name="totalBillText">Total bill:</string>
    <string name="tip_percentage">Tip percentage:</string>
    <string name="number_of_people">Number of people:</string>
    <string name="totalInputText">""</string>
    <string name="percentInputText">""</string>
    <string name="peopleInputText">""</string>
    <string name="totalInputHint" >Enter bill total</string>
    <string name="percentInputHint" >Tip amount as percent</string>
    <string name="peopleInputHint" >Number of people</string>
    <string name="calcBtnText">Calculate</string>
    <string name="splitLblText">Total per person:</string>
    <string name="splitOutputText" />
    <string name="InputError">Invalid Input</string>
    <string name="InputMissing">Missing Input</string>
    <string name="OutputError">Output Error</string>
</resources>