<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--    Guideline running up and down     -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

    <!--    Left layout for labels    -->
    <LinearLayout
        android:id="@+id/leftHorizontalLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/verticalGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/totalBillLbl"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:gravity="center|end"
            android:text="@string/totalBillText"
            android:textAlignment="gravity"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/percentLbl"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginEnd="4dp"
            android:gravity="center|end"
            android:text="@string/tip_percentage"
            android:textAlignment="gravity"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/peopleLbl"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginEnd="4dp"
            android:gravity="center|end"
            android:text="@string/number_of_people"
            android:textAlignment="gravity"
            android:textSize="18sp" />
    </LinearLayout>

    <!--    Right side input boxes   -->
    <LinearLayout
        android:id="@+id/rightHorizontalLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/verticalGuideline"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/totalInputLbl"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:autofillHints="@string/totalInputHint"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/totalInputText" />

        <EditText
            android:id="@+id/percentInputLbl"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:autofillHints="@string/percentInputHint"
            android:ems="10"
            android:inputType="number"
            android:text="@string/percentInputText" />

        <EditText
            android:id="@+id/peopleInputLbl"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:autofillHints="@string/peopleInputHint"
            android:ems="10"
            android:inputType="number"
            android:text="@string/peopleInputText" />
    </LinearLayout>

    <Button
        android:id="@+id/calcBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="150dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/calcBtnText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leftHorizontalLayout" />

    <!--    Bottom output layout    -->
    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcBtn">

        <TextView
            android:id="@+id/splitLbl"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:gravity="center|end"
            android:text="@string/splitLblText"
            android:textAlignment="gravity"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/verticalGuideline" />

        <TextView
            android:id="@+id/splitOutputLbl"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/splitOutputText"
            android:textAlignment="gravity"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/verticalGuideline" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>